--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.19.3",
     "@svgr/webpack": "^8.1.0",
     "next": "14.2.11",
     "react": "^18",
