--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.13.1",
+    "@cloudinary/url-gen": "^1.21.0",
     "@react-google-maps/api": "^2.19.3",
     "@svgr/webpack": "^8.1.0",
+    "axios": "^1.7.7",
+    "cloudinary": "^2.5.1",
     "next": "14.2.11",
+    "next-cloudinary": "^6.16.0",
     "react": "^18",
     "react-dom": "^18"
   },
