--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@svgr/webpack": "^8.1.0",
     "axios": "^1.7.7",
     "cloudinary": "^2.5.1",
+    "js-cookie": "^3.0.5",
     "next": "14.2.11",
     "next-cloudinary": "^6.16.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
