--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "axios": "^1.7.7",
     "cloudinary": "^2.5.1",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.469.0",
     "next": "14.2.11",
     "next-cloudinary": "^6.16.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
